# magpie-cpp

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines-release.yml  azure-pipelines.yml
.github/workflows/: ci.yml  release-debs.yml
cmake/: MagpieConfig.cmake.in  magpieConfig.cmake.in
examples/: CMakeLists.txt  audio_flac.cpp  base_node.cpp  image_jpeg.cpp  mqtt_publisher.cpp  mqtt_rpc_responder.cpp  mqtt_stream_writer.cpp  mqtt_subscriber.cpp  utils.cpp  webrtc_publisher.cpp  webrtc_rpc_responder.cpp  webrtc_stream_reader.cpp  webrtc_subscriber.cpp  zconf_discovery.cpp  zmq_publisher.cpp  zmq_rpc_requester.cpp  zmq_rpc_responder.cpp  zmq_stream_reader.cpp  zmq_subscriber.cpp
examples/discovery/: zconf_discovery.cpp
examples/mcp/: zmq_mcp_server.cpp
examples/mqtt/: mqtt_rpc_requester.cpp  mqtt_stream_reader.cpp
examples/nodes/: server_node.cpp
examples/schema/: zmq_schema_requester.cpp  zmq_schema_responder.cpp
examples/webrtc/: webrtc_rpc_requester.cpp  webrtc_stream_writer.cpp
examples/zmq/: zmq_rpc_responder.cpp  zmq_stream_writer.cpp
include/magpie/: magpie.hpp  version.hpp
include/magpie/discovery/: zconf_discovery.hpp
include/magpie/frames/: audio_frame.hpp  audio_frame_flac.hpp  frame.hpp  image_frame.hpp  image_frame_jpeg.hpp  primitive_frames.hpp
include/magpie/nodes/: base_node.hpp  process_node.hpp  server_node.hpp  sink_node.hpp  source_node.hpp
include/magpie/schema/: base_schema.hpp  json_rpc_schema.hpp  mcp_schema.hpp
include/magpie/serializer/: msgpack_serializer.hpp  serializer.hpp  value.hpp
include/magpie/transport/: mqtt_connection.hpp  mqtt_options.hpp  mqtt_publisher.hpp  mqtt_rpc_requester.hpp  mqtt_rpc_responder.hpp  mqtt_stream_reader.hpp  mqtt_stream_writer.hpp  mqtt_subscriber.hpp  rpc_requester.hpp  rpc_responder.hpp  stream_reader.hpp  stream_writer.hpp  timeout_error.hpp  webrtc_connection.hpp  webrtc_options.hpp  webrtc_publisher.hpp  webrtc_rpc_requester.hpp  webrtc_rpc_responder.hpp  webrtc_stream_reader.hpp  webrtc_stream_writer.hpp  webrtc_subscriber.hpp  zmq_publisher.hpp  zmq_rpc_requester.hpp  zmq_rpc_responder.hpp  zmq_stream_reader.hpp  zmq_stream_writer.hpp  zmq_subscriber.hpp
include/magpie/utils/: common.hpp  logger.hpp
src/discovery/: zconf_discovery.cpp
src/frames/: audio_frame.cpp  audio_frame_flac.cpp  frame.cpp  image_frame.cpp  image_frame_jpeg.cpp  primitive_frames.cpp
src/schema/: json_rpc_schema.cpp  mcp_schema.cpp
src/serializer/: msgpack_serializer.cpp  value.cpp
src/transport/: rpc_requester.cpp  rpc_responder.cpp  stream_reader.cpp  stream_writer.cpp
src/transport/mqtt/: mqtt_connection.cpp  mqtt_publisher.cpp  mqtt_rpc_requester.cpp  mqtt_rpc_responder.cpp  mqtt_stream_reader.cpp  mqtt_stream_writer.cpp  mqtt_subscriber.cpp
src/transport/webrtc/: webrtc_connection.cpp  webrtc_publisher.cpp  webrtc_rpc_requester.cpp  webrtc_rpc_responder.cpp  webrtc_stream_reader.cpp  webrtc_stream_writer.cpp  webrtc_subscriber.cpp
src/transport/zmq/: zmq_publisher.cpp  zmq_rpc_requester.cpp  zmq_rpc_responder.cpp  zmq_stream_reader.cpp  zmq_stream_writer.cpp  zmq_subscriber.cpp
src/utils/: common.cpp  logger.cpp
tests/: CMakeLists.txt  CMakeLists.txt.old  test_dummy.cpp  test_frame.cpp  test_logger.cpp  test_msgpack_serializer.cpp  test_value.cpp
